--- a/assets/bibliography/2025-05-07-dpo-practice.bib
+++ b/assets/bibliography/2025-05-07-dpo-practice.bib
@@ -122,14 +122,16 @@
 
 @misc{alignmentguidebook,
   title={Alignment Guidebook},
+  author={Shangmin Guo and Wei Xiong},
   url={https://www.notion.so/e5c64df77c0a4b528b7951e87337fa78?pvs=21},
   note = {Accessed: 2023-12-14}
 }
 
-@misc{huggingfacearmor,
-  title={ArmoRM-Llama3-8B-v0.1},
-  url={https://huggingface.co/RLHFlow/ArmoRM-Llama3-8B-v0.1},
-  note = {Accessed: 2023-12-14}
+@inproceedings{huggingfacearmor,
+      title={Interpretable Preferences via Multi-Objective Reward Modeling and Mixture-of-Experts}, 
+      author={Haoxiang Wang and Wei Xiong and Tengyang Xie and Han Zhao and Tong Zhang},
+      booktitle={EMNLP},
+      year={2024}
 }
 
 @article{pal2024smaug,
