--- a/assets/bibliography/2025-05-07-rlhf-generalization.bib
+++ b/assets/bibliography/2025-05-07-rlhf-generalization.bib
@@ -14,8 +14,8 @@
 }
 
 @misc{newfacade-notes-on-reinforcement-learning,
-  title = {Notes on Reinforcement Learning},
-  author = {Newfacade},
+  title = {Reinforcement Learning From Human Feedback Notes},
+  author = {Yunhui Xia and Wei Shen},
   howpublished = {\url{https://newfacade.github.io/notes-on-reinforcement-learning/17-ppo-trl.html}},
   year = {2023},
   note = {Accessed: 2024-06-26}
