--- a/assets/bibliography/2025-04-28-distill-example.bib
+++ b/assets/bibliography/2025-04-28-distill-example.bib
@@ -6,6 +6,13 @@
   url={https://arxiv.org/pdf/1502.04623.pdf}
 }
 
+@misc{dieleman2024spectral,
+  author = {Dieleman, Sander},
+  title = {Diffusion is spectral autoregression},
+  url = {https://sander.ai/2024/09/02/spectral-autoregression.html},
+  year = {2024}
+}
+
 @article{karras2022elucidating,
   title={Elucidating the design space of diffusion-based generative models},
   author={Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
